# satellite_sim

./: CMakeLists.txt  FreeRTOSConfig.h
backend/: bridge.py  main.py  models.py
frontend/mission/: index.html  package-lock.json  package.json
frontend/mission/src/: App.tsx  index.css  types.ts
frontend/mission/src/components/: LaserPanel.tsx  OrbitGlobe.tsx  Panel.tsx  SensorCharts.tsx  StatCell.tsx  SystemPanel.tsx  TopBar.tsx
frontend/mission/src/hooks/: useTelemetry.ts
frontend/mission/src/lib/: utils.ts
include/: common_types.h  orbit_task.h  sensor_task.h  socket_sender.h  telemetry_task.h  watchdog_task.h
notes/: uint32_t_wyjasnienie.md
src/: main.cpp
src/tasks/: orbit_task.cpp  sensor_task.cpp  socket_sender.cpp  telemetry_task.cpp  watchdog_task.cpp
